printout not scrolling on mobile - possible fix

--- a/style.css
+++ b/style.css
@@ -302,7 +302,8 @@
       .uneven {
         overflow-y: scroll;
       }
-      .prinout.box {
+      .printout,
+      .printout.box {
         touch-action: pan-y;
       }
 
